Svg frame overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@ body {
   background-image: linear-gradient(rgba(0, 0, 0, 0.02), rgba(0, 0, 0, 0));
   border: 2px solid rgb(221, 221, 221);
   border-radius: 12px;
-  overflow: auto;
+  /* overflow: auto; */
 }
 
 .sidebar {
